--- a/nlplabpy.ipynb
+++ b/nlplabpy.ipynb
@@ -45,8 +45,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import matplotlib\n",
-        "matplotlib.use('Agg')\n",
         "import nltk\n",
         "grammar = nltk.CFG.fromstring(\"\"\"\n",
         "S -> NP VP\n",
@@ -171,12 +169,93 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#N gram\n",
+        "import nltk\n",
+        "from nltk.util import ngrams\n",
+        "from collections import defaultdict, Counter\n",
+        "from nltk.corpus import reuters\n",
+        "nltk.download('punkt')\n",
+        "\n",
+        "\n",
+        "trigram_freq = defaultdict(Counter)\n",
+        "trigram_prob = defaultdict(Counter)\n",
+        "def process_sentences(sentences):\n",
+        "    for sentence in sentences:\n",
+        "        # Tokenize the sentence\n",
+        "        tokens = nltk.word_tokenize(sentence)\n",
+        "\n",
+        "        # Create trigrams for the sentence\n",
+        "        trigrams = list(ngrams(tokens, 3))\n",
+        "\n",
+        "        # Update trigram frequencies\n",
+        "        for t1, t2, t3 in trigrams:\n",
+        "            trigram_freq[(t1, t2)][t3] += 1\n",
+        "\n",
+        "    # Update trigram probabilities\n",
+        "    for (t1, t2), t3_freq in trigram_freq.items():\n",
+        "        total_count = sum(t3_freq.values())\n",
+        "        for t3, count in t3_freq.items():\n",
+        "            trigram_prob[(t1, t2)][t3] = count / total_count\n",
+        "\n",
+        "#N gram\n",
+        "def find_next_word(keyword1, keyword2):\n",
+        "    next_word = None\n",
+        "    max_prob = 0\n",
+        "\n",
+        "    for (t1, t2), t3_prob in trigram_prob.items():\n",
+        "        if t1 == keyword1 and t2 == keyword2:\n",
+        "            for t3, prob in t3_prob.items():\n",
+        "                if prob > max_prob:\n",
+        "                    max_prob = prob\n",
+        "                    next_word = t3\n",
+        "\n",
+        "    return next_word\n",
+        "\n",
+        "\n",
+        "input_sentences = [\n",
+        "    \"<S> I am Henry </S>\",\n",
+        "\"<S> I like college </S>\",\n",
+        "\"<S> Do Henry like college </S>\"\n",
+        "\"<S> Henry I am </S>\",\n",
+        "\"<S> Do I like Henry </S>\",\n",
+        "\"<S> Do I like college </S>\",\n",
+        "\"<S> I do like Henry </S>\"\n",
+        "]\n",
+        "\n",
+        "process_sentences(input_sentences)\n",
+        "\n",
+        "\n",
+        "keyword1 = \"I\"\n",
+        "keyword2 = \"like\"\n",
+        "next_word = find_next_word(keyword1, keyword2)\n",
+        "print(f\"The most probable next word after '{keyword1} {keyword2}' is '{next_word}'\")\n"
+      ],
       "metadata": {
-        "id": "oIBB8W2MNER4"
+        "id": "oIBB8W2MNER4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "50ce1222-6315-4f88-b8e2-95471f3bf75b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The most probable next word after 'I like' is 'college'\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -356,7 +435,7 @@
       "source": [
         "#1\n",
         "import re\n",
-        "text = \"My email is john@example.com. You can also reach me at jane@example.com or info@company.com.\"\n",
+        "text = \"My email is john@example.com.\"\n",
         "email_pattern = r'\\w+@\\w+\\.\\w+'\n",
         "emails = re.findall(email_pattern, text)\n",
         "\n",
@@ -364,7 +443,7 @@
         "\n",
         "#2\n",
         "import re\n",
-        "text = \"My phone number is 123-456-7890. You can also reach me at 9876543210 or +1-234-567-8901.\"\n",
+        "text = \"My phone number is 123-456-7890. 9003363162\"\n",
         "phone_pattern = r'\\d{3}-?\\d{3}-?\\d{4}'\n",
         "phones = re.findall(phone_pattern, text)\n",
         "\n",
